# zz3-quantum-computing

./: README.md
zz3-projet-ibm-q-experience/: README.md
zz3-projet-ibm-q-experience/01-entanglement/: entanglement_circuit.ipynb
zz3-projet-ibm-q-experience/02-addition/: 2_qubits_adder.ipynb  2_qubits_adder.qasm
zz3-projet-ibm-q-experience/03-Bernstein-Vazirani/: Bernstein-Vazirani.ipynb  Bernstein-Vazirani.qasm  Bernstein-Vazirani_alternate.qasm
zz3-projet-ibm-q-experience/04-Grover/: Grover.ipynb  Grover.qasm
zz3-projet-ibm-q-experience/05-Grover_function_inversion/: Grover_addition_inversion.ipynb  Grover_function_inversion.ipynb  Grover_inverse_AND.qasm  Grover_inverse_NOT.qasm
zz3-projet-simulateur-quantique/: CMakeLists.txt  README.md
zz3-projet-simulateur-quantique/include/: addition.hpp  cnot_toffoli.hpp  kronecker.hpp  types.hpp  utilities.hpp
zz3-projet-simulateur-quantique/src/: main.cpp
zz3-projet-simulateur-quantique/tests/: addition_test.cpp  boost_ublas_example.cpp  cnot_toffoli_test.cpp  kronecker_test.cpp
